finish removing serialization code; remove unused code; many misc refactorings